--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.10.1",
+    "bunyan": "^1.3.3",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.10.6",
