--- a/package.json
+++ b/package.json
@@ -16,5 +16,18 @@
     "morgan": "~1.5.1",
     "react": "^0.13.0-beta.1",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "browserify": "^8.1.3",
+    "gulp": "^3.8.10",
+    "gulp-notify": "^2.2.0",
+    "gulp-util": "^3.0.3",
+    "jsx-loader": "^0.12.2",
+    "react-hot-loader": "^1.1.4",
+    "reactify": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.3.0",
+    "webpack": "^1.5.3",
+    "webpack-dev-server": "^1.7.0"
   }
 }
