--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "body-parser": "~1.10.1",
     "bunyan": "^1.3.3",
+    "compression": "^1.4.0",
     "cookie-parser": "~1.3.3",
+    "cors": "^2.5.3",
     "debug": "~2.1.1",
     "express": "~4.10.6",
     "flux": "^2.0.1",
@@ -17,15 +19,19 @@
     "morgan": "~1.5.1",
     "react": "^0.13.0-beta.1",
     "redis": "^0.12.1",
+    "reflux": "^0.2.5",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.0.0-rc9",
     "browserify": "^8.1.3",
     "gulp": "^3.8.10",
+    "gulp-cssmin": "^0.1.6",
     "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.3.2",
+    "gulp-uglify": "^1.1.0",
     "jsx-loader": "^0.12.2",
+    "merge-stream": "^0.1.7",
     "reactify": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.3.0"
